--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -2,12 +2,12 @@
     "build_entry_point": "",
     "docsets_to_publish": [
         {
-            "docset_name": "openpublishing-test-corefx",
-            "build_output_subfolder": "openpublishing-test/corefx",
+            "docset_name": "openpublishing-test-op",
+            "build_output_subfolder": "openpublishing/test",
             "locale": "en-US",
             "version": 0,
             "open_to_public_contributors": "false"
         }
     ],
-    "notification_subscribers": [ "kenchen@microsoft.com", "fenxu@microsoft.com", "yih@microsoft.com" ]
+    "notification_subscribers": [ "yih@microsoft.com" ]
 }
