add type mapping in publish config

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,13 +1,16 @@
 {
     "build_entry_point": "",
-    "docsets_to_publish": [
-        {
-            "docset_name": "openpublishing-test-op",
-            "build_output_subfolder": "openpublishing/test",
-            "locale": "en-US",
-            "version": 0,
-            "open_to_public_contributors": "false"
+    "docsets_to_publish": [{
+        "docset_name": "openpublishing-test-op",
+        "build_output_subfolder": "openpublishing/test",
+        "locale": "en-US",
+        "version": 0,
+        "open_to_public_contributors": "false",
+        "type_mapping": {
+            "Conceptual": "Content",
+            "ManagedReference": "Content",
+            "RestApi": "Content"
         }
-    ],
-    "notification_subscribers": [ "yih@microsoft.com" ]
+    }],
+    "notification_subscribers": ["yih@microsoft.com"]
 }
