prepare publish config for dual-publish

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,16 +1,34 @@
 {
     "build_entry_point": "",
-    "docsets_to_publish": [{
-        "docset_name": "openpublishing-test-op",
-        "build_output_subfolder": "openpublishing/test",
-        "locale": "en-US",
-        "version": 0,
-        "open_to_public_contributors": "false",
-        "type_mapping": {
-            "Conceptual": "Content",
-            "ManagedReference": "Content",
-            "RestApi": "Content"
+    "docsets_to_publish": [
+        {
+            "docset_name": "openpublishing-test-op",
+            "build_entry_point": "op",
+            "build_output_subfolder": "openpublishing/test-op",
+            "build_source_folder": "openpublishing/test",
+            "locale": "en-US",
+            "version": 0,
+            "open_to_public_contributors": "false",
+            "type_mapping": {
+                "Conceptual": "Content",
+                "ManagedReference": "Content",
+                "RestApi": "Content"
+            }
+        },
+        {
+            "docset_name": "openpublishing-test-docs",
+            "build_entry_point": "docs",
+            "build_output_subfolder": "openpublishing/test-docs",
+            "build_source_folder": "openpublishing/test",
+            "locale": "en-US",
+            "version": 0,
+            "open_to_public_contributors": "false",
+            "type_mapping": {
+                "Conceptual": "Content",
+                "ManagedReference": "Content",
+                "RestApi": "Content"
+            }
         }
-    }],
+    ],
     "notification_subscribers": ["yih@microsoft.com"]
 }
