update notification list to opbuild@microsoft.com

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -30,5 +30,5 @@
             }
         }
     ],
-    "notification_subscribers": ["yih@microsoft.com"]
+    "notification_subscribers": ["opbuild@microsoft.com"]
 }
