--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -8,7 +8,7 @@
             "build_source_folder": "openpublishing/test",
             "locale": "en-US",
             "version": 0,
-            "open_to_public_contributors": "false",
+            "open_to_public_contributors": false,
             "type_mapping": {
                 "Conceptual": "Content",
                 "ManagedReference": "Content",
@@ -22,7 +22,7 @@
             "build_source_folder": "openpublishing/test",
             "locale": "en-US",
             "version": 0,
-            "open_to_public_contributors": "false",
+            "open_to_public_contributors": false,
             "type_mapping": {
                 "Conceptual": "Content",
                 "ManagedReference": "Content",
