--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "DocsTemplate"]
 	path = openpublishing/test/_themes
 	url = https://github.com/Microsoft/templates.docs.msft
-	branch = master
+	branch = develop
