add docset config to publish to TechNet

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -16,6 +16,20 @@
             }
         },
         {
+            "docset_name": "openpublishing-test-op-technet",
+            "build_entry_point": "op",
+            "build_output_subfolder": "openpublishing/test-op-technet",
+            "build_source_folder": "openpublishing/test",
+            "locale": "en-US",
+            "version": 0,
+            "open_to_public_contributors": false,
+            "type_mapping": {
+                "Conceptual": "Content",
+                "ManagedReference": "Content",
+                "RestApi": "Content"
+            }
+        },
+        {
             "docset_name": "openpublishing-test-docs",
             "build_entry_point": "docs",
             "build_output_subfolder": "openpublishing/test-docs",
