--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -5,7 +5,7 @@
     {
       "docset_name": "openpublishing-test-docs",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-docs",
+      "build_output_subfolder": "openpublishing/test",
       "locale": "en-us",
       "version": 0,
       "open_to_public_contributors": false,
@@ -17,9 +17,9 @@
       "build_entry_point": "docs"
     },
     {
-      "docset_name": "openpublishing-test-op",
+      "docset_name": "openpublishing-test-op-technet",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-op",
+      "build_output_subfolder": "openpublishing/test",
       "locale": "en-US",
       "version": 0,
       "open_to_public_contributors": false,
@@ -31,9 +31,9 @@
       "build_entry_point": "op"
     },
     {
-      "docset_name": "openpublishing-test-op-technet",
+      "docset_name": "openpublishing-test-op",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-op-technet",
+      "build_output_subfolder": "openpublishing/test",
       "locale": "en-US",
       "version": 0,
       "open_to_public_contributors": false,
@@ -47,7 +47,7 @@
     {
       "docset_name": "openpublishing-test-static-msdn",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-static-msdn",
+      "build_output_subfolder": "openpublishing/test",
       "locale": "en-US",
       "version": 0,
       "open_to_public_contributors": false,
