--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -80,7 +80,7 @@
      {
          "path_to_root": "_themes.static",
          "url": "https://github.com/Microsoft/templates.msdn.msft",
-         "branch": "master",
+         "branch": "develop",
          "branch_mapping": {
              "master": "develop"
          }
