--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
+
 [submodule "DocsTemplate"]
 	path = openpublishing/test/_themes
-	url = https://github.com/Microsoft/templates.docs.msft
-	branch = master
+	url = https://github.com/Microsoft/templates.opsdocs.msft
+	branch = develop
