--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -14,7 +14,8 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "docs"
+      "build_entry_point": "docs",
+      "template_folder": "_themes"
     },
     {
       "docset_name": "openpublishing-test-op-technet",
@@ -56,12 +57,33 @@
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
-      "build_entry_point": "docs"
+      "build_entry_point": "docs",
+      "template_folder": "_themes.static"
     }
   ],
   "notification_subscribers": [
     "opbuild@microsoft.com"
   ],
-  "branches_to_filter": [],
-  "skip_source_output_uploading": false
+  "branches_to_filter": [
+    "live"
+  ],
+  "skip_source_output_uploading": false,
+    "dependent_repositories": [
+     {
+         "path_to_root": "_themes",
+         "url": "https://github.com/Microsoft/templates.docs.msft",
+         "branch": "master",
+         "branch_mapping": {
+             "master": "develop"
+         }
+     },
+     {
+         "path_to_root": "_themes.static",
+         "url": "https://github.com/Microsoft/templates.msdn.msft",
+         "branch": "develop",
+         "branch_mapping": {
+             "master": "develop"
+         }
+     }
+   ]
 }
