--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -92,12 +92,16 @@
       "path_to_root": "_themes.MSDN.Modern",
       "url": "https://github.com/Microsoft/templates.msdn.msft",
       "branch": "master",
-      "branch_mapping": {}
+      "branch_mapping": {
+        "msdn_develop_e2e": "develop",
+        "msdn_release_e2e": "release",
+        "msdn_hotfix_e2e": "hotfix"
+      }
     },
     {
       "path_to_root": "_themes.VS.Modern",
       "url": "https://github.com/Microsoft/templates.vs.com",
-      "branch": "master",
+      "branch": "develop",
       "branch_mapping": {}
     }
   ]
