add branch mapping
add branch mapping for docs, msdn.modern, vs.modern

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -86,23 +86,31 @@
       "path_to_root": "_themes",
       "url": "https://github.com/Microsoft/templates.docs.msft",
       "branch": "master",
-      "branch_mapping": {}
+      "branch_mapping": {
+        "develop_e2e": "develop",
+        "release_e2e": "release",
+        "hotfix_e2e": "hotfix"
+      }
     },
     {
       "path_to_root": "_themes.MSDN.Modern",
       "url": "https://github.com/Microsoft/templates.msdn.msft",
       "branch": "master",
       "branch_mapping": {
-        "msdn_develop_e2e": "develop",
-        "msdn_release_e2e": "release",
-        "msdn_hotfix_e2e": "hotfix"
+        "develop_e2e": "develop",
+        "release_e2e": "release",
+        "hotfix_e2e": "hotfix"
       }
     },
     {
       "path_to_root": "_themes.VS.Modern",
       "url": "https://github.com/Microsoft/templates.vs.com",
       "branch": "develop",
-      "branch_mapping": {}
+      "branch_mapping": {
+        "develop_e2e": "develop",
+        "release_e2e": "release",
+        "hotfix_e2e": "hotfix"
+      }
     }
   ]
 }
