set use_dynamic_rendering to true

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -81,6 +81,7 @@
   ],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
+  "use_dynamic_rendering": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
