--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -74,6 +74,21 @@
       },
       "build_entry_point": "docs",
       "template_folder": "_themes.VS.Modern"
+    },
+    {
+      "docset_name": "openpublishing-test-starterkit",
+      "build_source_folder": "openpublishing-test-starterkit",
+      "build_output_subfolder": "test",
+      "locale": "en-us",
+      "version": 0,
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes.OPS"
     }
   ],
   "notification_subscribers": [
@@ -92,14 +107,13 @@
         "hotfix_e2e": "hotfix",
         "docs_develop_e2e": "ops_develop",
         "docs_release_e2e": "ops_release",
-        "docs_hotfix_e2e": "ops_hotfix",
-        "docker_develop_e2e": "docker_develop"
+        "docs_hotfix_e2e": "ops_hotfix"
       }
     },
     {
       "path_to_root": "_themes.MSDN.Modern",
       "url": "https://github.com/Microsoft/templates.msdn.msft",
-      "branch": "develop",
+      "branch": "master",
       "branch_mapping": {
         "msdn_develop_e2e": "develop",
         "msdn_release_e2e": "release",
@@ -109,13 +123,19 @@
     {
       "path_to_root": "_themes.VS.Modern",
       "url": "https://github.com/Microsoft/templates.vs.com",
-      "branch": "develop",
+      "branch": "master",
       "branch_mapping": {
         "master": "develop",
         "vscom_develop_e2e": "develop",
         "vscom_release_e2e": "release",
         "vscom_hotfix_e2e": "hotfix"
       }
+    },
+    {
+      "path_to_root": "_themes.OPS",
+      "url": "https://github.com/Microsoft/templates.starterkit",
+      "branch": "master",
+      "branch_mapping": {}
     }
   ]
 }
