Change config for StarterKit template testing.

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -135,7 +135,11 @@
       "path_to_root": "_themes.OPS",
       "url": "https://github.com/Microsoft/templates.starterkit",
       "branch": "master",
-      "branch_mapping": {}
+      "branch_mapping": {
+        "develop_e2e": "develop",
+        "release_e2e": "release",
+        "hotfix_e2e": "hotfix"
+      }
     }
   ]
 }
