--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -137,6 +137,7 @@
       "branch": "master",
       "branch_mapping": {
         "develop_e2e": "develop",
+        "vscom_develop_e2e": "develop",
         "release_e2e": "release",
         "hotfix_e2e": "hotfix"
       }
