--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -46,6 +46,21 @@
       "build_entry_point": "op"
     },
     {
+      "docset_name": "openpublishing-test-starterkit",
+      "build_source_folder": "openpublishing/test",
+      "build_output_subfolder": "test",
+      "locale": "en-us",
+      "version": 0,
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes.OPS"
+    },
+    {
       "docset_name": "openpublishing-test-static-msdn",
       "build_source_folder": "openpublishing/test",
       "build_output_subfolder": "openpublishing/test-static-msdn",
@@ -74,21 +89,6 @@
       },
       "build_entry_point": "docs",
       "template_folder": "_themes.VS.Modern"
-    },
-    {
-      "docset_name": "openpublishing-test-starterkit",
-      "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing-test-starterkit",
-      "locale": "en-us",
-      "version": 0,
-      "open_to_public_contributors": true,
-      "type_mapping": {
-        "Conceptual": "Content",
-        "ManagedReference": "Content",
-        "RestApi": "Content"
-      },
-      "build_entry_point": "docs",
-      "template_folder": "_themes.OPS"
     }
   ],
   "notification_subscribers": [
@@ -111,6 +111,12 @@
       }
     },
     {
+      "path_to_root": "_themes.OPS",
+      "url": "https://github.com/Microsoft/templates.starterkit",
+      "branch": "master",
+      "branch_mapping": {}
+    },
+    {
       "path_to_root": "_themes.MSDN.Modern",
       "url": "https://github.com/Microsoft/templates.msdn.msft",
       "branch": "master",
@@ -129,16 +135,6 @@
         "vscom_develop_e2e": "develop",
         "vscom_release_e2e": "release",
         "vscom_hotfix_e2e": "hotfix"
-      }
-    },
-    {
-      "path_to_root": "_themes.OPS",
-      "url": "https://github.com/Microsoft/templates.starterkit",
-      "branch": "master",
-      "branch_mapping": {
-        "develop_e2e": "develop",
-        "release_e2e": "release",
-        "hotfix_e2e": "hotfix"
       }
     }
   ]
