--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -117,8 +117,7 @@
       "branch_mapping": {
         "develop_e2e": "develop",
         "release_e2e": "release",
-        "hotfix_e2e": "hotfix",
-        "starterkit_develop_e2e": "develop"
+        "hotfix_e2e": "hotfix"
       }
     },
     {
