--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -3,19 +3,19 @@
   "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
-      "docset_name": "openpublishing-test-static-msdn",
+      "docset_name": "openpublishing-test-static-vscom",
       "build_source_folder": "openpublishing/test",
-      "build_output_subfolder": "openpublishing/test-static-msdn",
+      "build_output_subfolder": "openpublishing/test-static-vscom",
       "locale": "en-us",
       "version": 0,
-      "open_to_public_contributors": false,
+      "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
       },
       "build_entry_point": "docs",
-      "template_folder": "_themes.MSDN.Modern"
+      "template_folder": "_themes.VS.Modern"
     }
   ],
   "notification_subscribers": [
