Initialize open publishing repository: https://github.com/Microsoft/openpublishing-test of branch live

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -175,11 +175,7 @@
       "path_to_root": "_themes.TechNet.Modern",
       "url": "https://github.com/Microsoft/templates.technet.msft",
       "branch": "master",
-      "branch_mapping": {
-        "technet_develop_e2e": "develop",
-        "technet_release_e2e": "release",
-        "technet_hotfix_e2e": "hotfix"
-      }
+      "branch_mapping": {}
     }
   ]
 }
