--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -91,6 +91,21 @@
       "template_folder": "_themes.MSDN.Modern"
     },
     {
+      "docset_name": "openpublishing-test-static-technet",
+      "build_source_folder": "openpublishing/test",
+      "build_output_subfolder": "openpublishing/test",
+      "locale": "en-us",
+      "version": 0,
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "op",
+      "template_folder": "_themes.TechNet.Modern"
+    },
+    {
       "docset_name": "openpublishing-test-static-vscom",
       "build_source_folder": "openpublishing/test",
       "build_output_subfolder": "openpublishing/test-static-vscom",
