--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -126,6 +126,7 @@
   ],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
+  "enable_incremental_build": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
