--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -119,6 +119,21 @@
       },
       "build_entry_point": "docs",
       "template_folder": "_themes.VS.Modern"
+    },
+    {
+      "docset_name": "openpublishing-test-static-vscomuhf",
+      "build_source_folder": "openpublishing/test",
+      "build_output_subfolder": "openpublishing/test",
+      "locale": "en-us",
+      "version": 0,
+      "open_to_public_contributors": true,
+      "type_mapping": {
+        "Conceptual": "Content",
+        "ManagedReference": "Content",
+        "RestApi": "Content"
+      },
+      "build_entry_point": "docs",
+      "template_folder": "_themes.VS.UHF"
     }
   ],
   "notification_subscribers": [
@@ -126,7 +141,6 @@
   ],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
-  "enable_incremental_build": true,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
@@ -181,6 +195,12 @@
         "vscom_release_e2e": "release",
         "vscom_hotfix_e2e": "hotfix"
       }
+    },
+    {
+      "path_to_root": "_themes.VS.UHF",
+      "url": "https://github.com/Microsoft/templates.vs.com.vscomuhf",
+      "branch": "master",
+      "branch_mapping": {}
     }
   ]
 }
